@@ -12,98 +12,98 @@
 --------------------------------------------------------------------------------
 
 CallInsList = {
+	"Shutdown",
+	"LayoutButtons",
+	"ConfigureLayout",
+	"CommandNotify",
 
-  "Shutdown",
-  "LayoutButtons",
-  "ConfigureLayout",
-  "CommandNotify",
+	"KeyPress",
+	"KeyRelease",
+	"TextInput",
+	"MouseMove",
+	"MousePress",
+	"MouseRelease",
+	"JoyAxis",
+	"JoyHat",
+	"JoyButtonDown",
+	"JoyButtonUp",
+	"IsAbove",
+	"GetTooltip",
+	"AddConsoleLine",
+	"GroupChanged",
+	"WorldTooltip",
 
-  "KeyPress",
-  "KeyRelease",
-  "TextInput",
-  "MouseMove",
-  "MousePress",
-  "MouseRelease",
-  "JoyAxis",
-  "JoyHat",
-  "JoyButtonDown",
-  "JoyButtonUp",
-  "IsAbove",
-  "GetTooltip",
-  "AddConsoleLine",
-  "GroupChanged",
-  "WorldTooltip",
+	"GameLoadLua",
+	"GameStartPlaying",
+	"GameOver",
+	"TeamDied",
 
-  "GameLoadLua",
-  "GameStartPlaying",
-  "GameOver",
-  "TeamDied",
+	"UnitCreated",
+	"UnitFinished",
+	"UnitFromFactory",
+	"UnitReverseBuilt",
+	"UnitDestroyed",
+	"RenderUnitDestroyed",
+	"UnitTaken",
+	"UnitGiven",
+	"UnitIdle",
+	"UnitCommand",
+	"UnitSeismicPing",
+	"UnitEnteredRadar",
+	"UnitEnteredLos",
+	"UnitLeftRadar",
+	"UnitLeftLos",
+	"UnitLoaded",
+	"UnitUnloaded",
+	"UnitHarvestStorageFull",
 
-  "UnitCreated",
-  "UnitFinished",
-  "UnitFromFactory",
-  "UnitReverseBuilt",
-  "UnitDestroyed",
-  "RenderUnitDestroyed",
-  "UnitTaken",
-  "UnitGiven",
-  "UnitIdle",
-  "UnitCommand",
-  "UnitSeismicPing",
-  "UnitEnteredRadar",
-  "UnitEnteredLos",
-  "UnitLeftRadar",
-  "UnitLeftLos",
-  "UnitLoaded",
-  "UnitUnloaded",
-  "UnitHarvestStorageFull",
+	"UnitEnteredWater",
+	"UnitEnteredAir",
+	"UnitLeftWater",
+	"UnitLeftAir",
 
-  "UnitEnteredWater",
-  "UnitEnteredAir",
-  "UnitLeftWater",
-  "UnitLeftAir",
+	"FeatureCreated",
+	"FeatureDestroyed",
 
-  "FeatureCreated",
-  "FeatureDestroyed",
+	"DrawGenesis",
+	"DrawWater",
+	"DrawSky",
+	"DrawSun",
+	"DrawWorld",
+	"DrawWorldPreUnit",
+	"DrawWorldPreParticles",
+	"DrawWorldShadow",
+	"DrawWorldReflection",
+	"DrawWorldRefraction",
+	"DrawScreenEffects",
+	"DrawScreenPost",
+	"DrawScreen",
+	"DrawInMiniMap",
 
-  "DrawGenesis",
-  "DrawSky",
-  "DrawSun",
-  "DrawWorld",
-  "DrawWorldPreUnit",
-  "DrawWorldPreParticles",
-  "DrawWorldShadow",
-  "DrawWorldReflection",
-  "DrawWorldRefraction",
-  "DrawScreenEffects",
-  "DrawScreenPost",
-  "DrawScreen",
-  "DrawInMiniMap",
+	"Explosion",
+	"ShockFront",
 
-  "Explosion",
-  "ShockFront",
+	"RecvSkirmishAIMessage",
 
-  "RecvSkirmishAIMessage",
+	"GameFrame",
+	"CobCallback",
+	"AllowCommand",
+	"CommandFallback",
+	"AllowUnitCreation",
+	"AllowUnitTransfer",
+	"AllowUnitBuildStep",
+	"AllowFeatureCreation",
+	"AllowFeatureBuildStep",
+	"AllowResourceLevel",
+	"AllowResourceTransfer",
 
-  "GameFrame",
-  "CobCallback",
-  "AllowCommand",
-  "CommandFallback",
-  "AllowUnitCreation",
-  "AllowUnitTransfer",
-  "AllowUnitBuildStep",
-  "AllowFeatureCreation",
-  "AllowFeatureBuildStep",
-  "AllowResourceLevel",
-  "AllowResourceTransfer",
+	"GameProgress",
 
-  "GameProgress",
-
-  "DownloadQueued",
-  "DownloadStarted",
-  "DownloadFinished",
-  "DownloadFailed",
-  "DownloadProgress",
+	"DownloadQueued",
+	"DownloadStarted",
+	"DownloadFinished",
+	"DownloadFailed",
+	"DownloadProgress",
 }
 
 
