@@ -7,6 +7,7 @@ SET(sources_engine_Rendering
 		"${CMAKE_CURRENT_SOURCE_DIR}/DebugDrawerAI.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/DefaultPathDrawer.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/QTPFSPathDrawer.cpp"
+		"${CMAKE_CURRENT_SOURCE_DIR}/Env/LuaWater.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/Env/LuaSky.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/Env/AdvTreeDrawer.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/Env/AdvTreeGenerator.cpp"
