@@ -122,6 +122,7 @@
 	SETUP_EVENT(ViewResize,     MANAGED_BIT | UNSYNCED_BIT)
 
 	SETUP_EVENT(DrawGenesis,              MANAGED_BIT | UNSYNCED_BIT)
+	SETUP_EVENT(DrawWater,                MANAGED_BIT | UNSYNCED_BIT)
 	SETUP_EVENT(DrawSky,                  MANAGED_BIT | UNSYNCED_BIT)
 	SETUP_EVENT(DrawSun,                  MANAGED_BIT | UNSYNCED_BIT)
 	SETUP_EVENT(DrawWorld,                MANAGED_BIT | UNSYNCED_BIT)
